Tue Jun 15 16:13:30 2004  Irfan Pyarali  <irfan@oomworks.com>

	* performance-tests\Protocols:

	  New test for measuring the performance of protocols under
	  varying network conditions.

Mon Jun 14 19:34:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO-INSTALL.html:
          The IDL compiler now generates .inl files instead of .i so updated
          this file

Mon Jun 14 19:32:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO-INSTALL.html:
          Updated supported environments table

Mon Jun 14 17:17:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Array_VarOut_T.inl:
          Corrected return type of TAO_Array_Forany_T<>::nocopy so that it
          matches its declaration

Mon Jun 14 17:13:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/RtEC/Schedule/Service.cpp:
          Added needed includes

Mon Jun 14 17:07:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Mcast_EH.cpp:
        * orbsvcs/orbsvcs/Event/ECG_Simple_Mcast_EH.cpp:
          Added needed includes

Mon Jun 14 16:50:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/UIOP_Acceptor.cpp:
          Added needed includes

Mon Jun 14 11:50:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/ValueFactory_Map.cpp:
          To make things easier to maintenance use the new
          ACE_HAS_EXPLICIT_STATIC_TEMPLATE_MEMBER_INSTANTIATION macro to check
          whether we need to explicit instantiate static template members.
          This macro is set for the GNU compiler for AIX, HPUX and VxWorks.

        * performance-tests/Cubit/TAO/DII_Cubit/client.cpp:
        * performance-tests/CCubit/TAO/IDL_Cubit/collocation_test.cpp:
        * performance-tests/CCubit/TAO/IDL_Cubit/server.cpp:
        * performance-tests/CRTCorba/Multiple_Endpoints/Orb_Per_Priority/client.cpp: