@@ -8,6 +8,9 @@
 #include "ace/Synch_Traits.h"
 #include "ace/Thread_Mutex.h"
 #include "ace/OS_NS_string.h"
+#include "ace/Log_Msg.h"
+#include "ace/Synch.h"
+#include "ace/OS_NS_stdio.h"
 
 ACE_RCSID (Strategies,
            SCIOP_Endpoint,
